[gd_scene load_steps=4 format=3 uid="uid://oxasxbuqawd3"]

[ext_resource type="Script" path="res://Scripts/Interfaces/Chats/ChatPlayer.gd" id="1_r83w4"]
[ext_resource type="PackedScene" uid="uid://bg5ayc02w5k23" path="res://DialogueManager/DialogueController.tscn" id="2_lxmu4"]
[ext_resource type="Texture2D" uid="uid://dttv8fwldjisy" path="res://Sprites/9slicepanel.png" id="2_y7rvg"]

[node name="ChatStoryPlayer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_r83w4")

[node name="PanelContainer" type="NinePatchRect" parent="."]
layout_mode = 2
offset_right = 1025.0
offset_bottom = 1805.0
texture = ExtResource("2_y7rvg")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="StoryMarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
offset_right = 1025.0
offset_bottom = 1805.0
theme_override_constants/margin_top = 120
theme_override_constants/margin_bottom = 20

[node name="StoryVBoxContainer" type="VBoxContainer" parent="PanelContainer/StoryMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PanelContainer/StoryMarginContainer/StoryVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Chatroom"

[node name="StoryScrollContainer" type="Container" parent="PanelContainer/StoryMarginContainer/StoryVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogueController" parent="PanelContainer/StoryMarginContainer/StoryVBoxContainer/StoryScrollContainer" instance=ExtResource("2_lxmu4")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="back_button" from="PanelContainer/StoryMarginContainer/StoryVBoxContainer/StoryScrollContainer/DialogueController" to="." method="_on_dialogue_controller_back_button"]
